# relevance-rag

./: .gitignore  README.md  __main__.py  app.py  llama_index_doc_example.py  pyproject.toml
api/: api_dataclasses.py  knowledge_store_api.py
docs_example_code/: NOTES.md  llama_index_auto_merging.py  llama_index_doc_example.py  llama_index_ensemble.py  llama_index_simple.py  question_generator.py
eval_data/: eval_results.csv  eval_results.pkl  evaluation_questions.csv  responses.csv  responses.pkl
relevance_pipeline/data_stores/: automerging_vector_store.py  bm25_store.py  gpt_memory_store.py  store.py  store_factory.py
relevance_pipeline/evaluators/: evaluate.py
relevance_pipeline/query_ai/: open_ai_gpt.py  query_datamodels.py
relevance_pipeline/utils/: dataloaders.py  rag_pipelines.py
